--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
                         introduce un cortometraggio animato che esplora il conflitto interiore del protagonista, segnando un
                         cambiamento nel modo in cui l'animazione viene utilizzata nei blockbuster, abbandonando i cliché infantili
                         per affrontare temi più complessi.</p>
-                        <p>Film come Flow di Gints Zilbalodis e Sauvages di Claude Barras mostrano come l'animazione possa creare
-                            esperienze visive intense e affrontare questioni ecologiche e sociali senza ricorrere all'antropomorfizzazione.
-                            Anche Linda e il pollo di Chiara Malta e Sébastien Laudenbach esplora il lutto e il conflitto tra bambini e
-                            adulti, dimostrando che l'animazione può andare oltre il semplice intrattenimento per bambini.</p>
-                        <p>In Italia, Invelle di Simone Massi offre una narrazione non lineare che riflette sulla tradizione contadina,
-                            mentre Il segreto di Liberato combina documentario e animazione, sebbene con risultati meno incisivi. Tuttavia,
-                            l'interesse per l'animazione autoriale sta crescendo, come dimostrato dall'aumento delle sale che proiettano film
-                            come Flow, avvicinando così l'animazione a un pubblico più ampio.</p>
+                    <p>Film come Flow di Gints Zilbalodis e Sauvages di Claude Barras mostrano come l'animazione possa creare
+                        esperienze visive intense e affrontare questioni ecologiche e sociali senza ricorrere all'antropomorfizzazione.
+                        Anche Linda e il pollo di Chiara Malta e Sébastien Laudenbach esplora il lutto e il conflitto tra bambini e
+                        adulti, dimostrando che l'animazione può andare oltre il semplice intrattenimento per bambini.</p>
+                    <p>In Italia, Invelle di Simone Massi offre una narrazione non lineare che riflette sulla tradizione contadina,
+                        mentre Il segreto di Liberato combina documentario e animazione, sebbene con risultati meno incisivi. Tuttavia,
+                        l'interesse per l'animazione autoriale sta crescendo, come dimostrato dall'aumento delle sale che proiettano film
+                        come Flow, avvicinando così l'animazione a un pubblico più ampio.</p>
+                </div>
     </main>
     <footer>
         <p>Leggi anche</p>
@@ -67,7 +68,5 @@
             </div>
         </section>
     </footer>
-
 </body>
-
 </html>
