--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <section class="card">
             <div>
-            <img src="IMG/Screenshot 2025-03-25 alle 16.05.55.png" alt="">
+            <img src="img/Screenshot 2025-03-25 alle 16.05.55.png" alt="">
             <div class="articolo-testo">
             <h2>Un pubblico trasversale</h2>
                 <div class="articolo-testo">
