--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
         <p>Leggi anche</p>
         <section class="img1">
             <div>
-                <img src="IMG/grigio2.png" alt="">
+                <img src="img/grigio2.png" alt="">
                 <h3>Intervista a Luciano Floridi</h3>
                 <p>Di Luca Barbara</p>
             </div>
             <div>
-                <img src="IMG/azzurro.png" alt="">
+                <img src="img/azzurro.png" alt="">
                 <h3>Intervista e Eli Noam</h3>
                 <p>Di Fabio Guarnacci</p>
             </div>
             <div>
-                <img src="IMG/grigio.png" alt="">
+                <img src="img/grigio.png" alt="">
                 <h3>Intervista a Jay David Bolter</h3>
                 <p>Di Fabio Guarnaccia</p>
             </div>
             <div>
-                <img src="IMG/rosa.png" alt="">
+                <img src="img/rosa.png" alt="">
                 <h3>Intervista a Thomas Poell</h3>
                 <p>Di Luca Barra</p>
             </div>
